fix notification bubble spacing

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -23,11 +23,13 @@
     margin-right: 0.5rem;;
     p {
       margin: 0;
+      padding-top: 1.5px;
+      padding-left: 2px;
       position: absolute;
       right: 0;
       top: 0;
       border: solid red 1px;
-      border-radius: 40%;
+      border-radius: 50%;
       background-color: red;
       font-size: small;
       color: $white;
